--- a/排序算法总结.md
+++ b/排序算法总结.md
@@ -34,7 +34,7 @@ public class BubbleSort {
 
 ### 2. 插入排序
 
-* 实现原理：在一个已经排序好的数组中插入一个数据，则需要对该数据的位置进行查找，若找到了则直接将改数据插入即可。插入排序就是将需要排序的数组分为两部分，已排序好的和等待排序的，一次从等待排序中取出一个数据放入按序放入已排序好的部分中，直到数据取出完毕。
+* 实现思路：在一个已经排序好的数组中插入一个数据，则需要对该数据的位置进行查找，若找到了则直接将改数据插入即可。插入排序就是将需要排序的数组分为两部分，已排序好的和等待排序的，一次从等待排序中取出一个数据放入按序放入已排序好的部分中，直到数据取出完毕。
 * 实现代码：
 
 ~~~java
@@ -45,13 +45,42 @@ public class InsertionSort {
         for(int i = 1; i < nums.length; i ++) {
             //拿出要插入的数据
             int num = nums[i];
+            int j = i - 1;
             //进行插入寻找并连续的交换位置
-            for(int j = i - 1; j >= 0 && nums[j] < nums[i]; j--) {
-                nums[j + 1] = nums[j];
+            for(; j >= 0 && nums[j] > nums[i]; j--) {
+                nums[j + 1] = nums[j];//循环的将已排序好的数组进行整体后移操作
             }
             nums[j + 1] = num;
         }
     }
 }
 ~~~
+
+### 3. 选择排序
+
+* 实现思路：和插入排序有些类似，都是将排序数组分为两部分。但选择排序是从未排序中取出最小的元素，直接将数组从小到大一点点拼接。
+* 实现代码
+
+~~~java
+import java.util.Arrays;
+
+public class SelectionSort {
+    public static void selectSort(int[] nums) {
+        for(int i = 0; i < nums.length; i ++) {
+            int minIndex = i;
+            for(int j = i; j < nums.length; j ++) {
+                if(nums[j] < nums[minIndex]) {
+                    minIndex = j;//每次找到的都是剩下最小的元素
+                }
+            }
+            //进行数据交换
+            int temp = nums[i];
+            nums[i] = nums[minIndex];
+            nums[minIndex] = temp;
+        }
+    }
+}
+~~~
+
+### 4.
 
